force-app/main/default/objects/App_Feeds__c/App_Feeds__c.object-meta.xml
<CustomObject>
    <label>App Feed</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>App Feeds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>