force-app/main/default/objects/App_Feeds__c/fields/Booking_Id__c.field-meta.xml
<CustomField>
    <fullName>Booking_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Id</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipName>Home_page_feeds</relationshipName>
    <type>Lookup</type>
</CustomField>