force-app/main/default/objects/App_Feeds__c/fields/Center__c.field-meta.xml
<CustomField>
    <fullName>Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Centre Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>App Feeds (Center)</relationshipLabel>
    <relationshipName>Home_page_feeds3</relationshipName>
    <type>Lookup</type>
</CustomField>