force-app/main/default/objects/App_Feeds__c/fields/Instrument__c.field-meta.xml
<CustomField>
    <fullName>Instrument__c</fullName>
    <label>Instrument</label>
    <length>100</length>
    <type>Text</type>
</CustomField>