force-app/main/default/objects/App_Feeds__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Home_page_feeds</relationshipName>
    <type>Lookup</type>
</CustomField>