force-app/main/default/objects/App_Feeds__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Home_page_feeds1</relationshipName>
    <type>Lookup</type>
</CustomField>