force-app/main/default/objects/App_Feeds__c/fields/Teacher__c.field-meta.xml
<CustomField>
    <fullName>Teacher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Teacher</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Home_page_feeds2</relationshipName>
    <type>Lookup</type>
</CustomField>