force-app/main/default/objects/App_Feeds__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reschedule</fullName>
            </value>
            <value>
                <fullName>Make-Up</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>5th Lesson - CX</fullName>
            </value>
            <value>
                <fullName>5th Lesson - MU</fullName>
            </value>
            <value>
                <fullName>5th Lesson - AH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>